# dotfile-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  flake.nix  index.html  package-lock.json  package.json  postcss.config.cjs  shell.nix  tailwind.config.cjs  tauri-run  tauri.conf.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: create.rs  export.rs  import.rs  lib.rs  list.rs  pull.rs  remove.rs  updater.rs
src/cli/: .args.rs.rustfmt  args.rs  list.rs  main.rs
src/gui/: main.rs  main.rs.bak
src/gui/src-tauri/: main.rs  tauri.conf.json
src/gui/src-ui/src/: App.svelte  style.css
src/gui/src-ui/src/lib/: SuccessAlert.svelte  TemplateInfo.svelte  TemplateList.svelte
src/libgit2-rs/: clone_git.rs  pull.rs  pull_git.rs
