[package]
name = "dotfile-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dman"
path = "src/cli/main.rs"

[[bin]]
name = "dman-gui"
path = "src/gui/src-tauri/main.rs"
required-features = ["gui"]

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
gui = ["tauri-feat"]
tauri-feat = ["tauri", "tauri/custom-protocol", "tauri-build"]

[dependencies]
clap = "4"
clap_complete = "4"
get-shell = "0"
git2 = "0"
owo-colors = "3"
question = "0"
# relm4 = { version = "0.5.0-rc.1", features = ["libadwaita"], optional = true }
serde = { version = "1", features = ["derive"] }
structopt = "0"
tabled = { version = "0", features = ["color"] }
tauri = { version = "1", features = ["shell-open"], optional = true }
toml = "0"
which = "4"

[build-dependencies]
tauri-build = { version = "1", features = [], optional = true }
