[package]
name = "dotfile-manager"
version = "0.1.0"
authors = ["Adam Cvikl <adam.wasd4@gmail.com>"]
categories = []
description = "Manage and sync your dotfiles across multiple machines using Git"
documentation = ""
license = "GPL-3.0"
repository = "https://github.com/Adamekka/dotfile-manager"
edition = "2021"

[[bin]]
name = "dman"
path = "src/cli/main.rs"

[[bin]]
name = "dman-gui"
path = "src/gui/src-tauri/main.rs"
required-features = ["gui"]

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
gui = ["tauri-feat"]
tauri-feat = ["tauri", "tauri/custom-protocol", "tauri-build"]

[dependencies]
clap = "4"
clap_complete = "4"
git2 = "0"
mytools = { git = "https://github.com/Adamekka/mytools", branch = "main" }
owo-colors = "3"
question = "0"
serde = { version = "1", features = ["derive"] }
structopt = "0"
tabled = { version = "0", features = ["color"] }
tauri = { version = "1", features = ["shell-open"], optional = true }
termsize = "0"
toml = "0"
which = "4"

[target.family.unix.dependencies]
get-shell = "0"

[build-dependencies]
tauri-build = { version = "1", features = [], optional = true }
